# DeskHub

./: .gitignore  AGENTS.md  CHANGELOG.md  DECISIONS.md  PACKAGING_STRATEGY.md  PERFORMANCE_BASELINE.md  PLATFORM_SUPPORT.md  PROJECT_STATUS.md  README.md  RELEASE.md  RELEASE_ASSET_TEMPLATES.md  VERSIONING.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
release-assets/first-release-draft/: README.md  RELEASE_NOTES.md  UPGRADE_NOTES.md
scripts/: generate-release-assets.mjs  report-bundle-stats.mjs
skills/phase-runner/: SKILL.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bookmark_importer.rs  commands.rs  launcher.rs  main.rs  migrations.rs  models.rs  platform_launcher.rs  project_inspector.rs  storage.rs
src/app/: AppLayout.tsx  AppRouter.test.tsx  AppRouter.tsx  ItemsContext.test.tsx  ItemsContext.tsx  items-context.ts
src/components/: BatchEditModal.tsx  BrowserBookmarkImportModal.tsx  CommandPalette.tsx  CompactTileCard.tsx  ConfirmDialog.tsx  DataToolsModal.test.tsx  DataToolsModal.tsx  DeferredModalFallback.tsx  EmptyState.tsx  ItemFormModal.test.tsx  ItemFormModal.tsx  OverviewLayoutModal.tsx  ProjectDirectoryImportModal.tsx  QuickNoteModal.tsx  ResourceRowCard.tsx  SearchBar.tsx  SelectionToolbar.tsx  Sidebar.tsx  TagFilterMenu.tsx  Topbar.tsx  TypeBadge.tsx  VirtualList.test.tsx  VirtualList.tsx  WorkflowCard.tsx  WorkflowExecutionSummaryDialog.tsx  (+1 more)
(+39 files in other folders)
