[package]
name = "deskhub"
version = "0.2.1"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
toml = "0.9.8"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23.0"
